Fixed problem with floated divs overflowing

--- a/static/main.css
+++ b/static/main.css
@@ -19,8 +19,10 @@ a {
 	padding-top: 25px;
 	padding-left: 15px;
 	padding-right: 15px;
+	padding-bottom: 25px;
 	/* graphics */
 	box-shadow: 0px 0px 30px;
+	overflow: auto;
 }
 
 /* simple positions */
